--- a/package.json
+++ b/package.json
@@ -21,16 +21,21 @@
     "fmt": "prettier --write '**/*.{tsx,ts,json,css,scss,md}'"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.1.1",
+    "@stripe/stripe-js": "^1.54.1",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^1.0.12",
     "@types/chrome": "^0.0.236",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^1.3.2",
     "glob": "^9.2.1",
     "prettier": "^2.7.1",
